feat: add visitor custom label sub-feature
